--- a/views/stats/month-table.ejs
+++ b/views/stats/month-table.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/boilerplate %>
 
-<h1>Month</h1>
+<h1><%=month%></h1>
 <div class='chart-container' style="position: relative; height:60vh; width:60vw">
 	<canvas id="myLineChart" width="400" height="400"></canvas>
 </div>
