--- a/views/food-entries/food-result-add.ejs
+++ b/views/food-entries/food-result-add.ejs
@@ -5,11 +5,14 @@
 	<div class='form-div'>
 			
 		<div class='add-div'>
+			
 			<form method='POST' action='/food' class='add-form'>
 				<input name='time' type='time' placeholder='time' required />
-				<input name='name' type='text' value='<%=data.name%>' required />
-				<input name='cals' type='number' value='<%=data.cals%>' required />
-				<input name='details' type='text' value='<%=data.details%>' />
+
+				<input name='name' type='text' value='<%=name%>' required />
+				<input name='cals' type='number' value='<%=cals%>' required />
+				<input name='details' type='text' value='<%=details%>' />
+
 				<input type='submit' value='add' class='button'/>
 			</form>
 		</div>
