--- a/views/food-entries/food-result-add.ejs
+++ b/views/food-entries/food-result-add.ejs
@@ -5,8 +5,8 @@
 	<div class='form-div'>
 			
 		<div class='add-div'>
-			
-			<form method='POST' action='/food' class='add-form'>
+
+			<form method='POST' action='/food' class='result-add-form'>
 				<input name='time' type='time' placeholder='time' required />
 
 				<input name='name' type='text' value='<%=name%>' required />
