--- a/views/stats/stats-index.ejs
+++ b/views/stats/stats-index.ejs
@@ -2,13 +2,16 @@
 
 <h1>Stats Index</h1>
 
-	<h2>By Month</h2>
+<h2 class='month-header'>By Month</h2>
+
+<div class='month-div'>
 	<% for(let month of months) { %>
 		<a href='/stats/<%=month.number%>'>
 		<div class='month entry'>
-			<h2 class='time-col'><%=month.string%></h1>
+			<h2 class=''><%=month.string%></h1>
 		</div>
 		</a>
 	<% } %>
+<div>
 
 <% include ../partials/end %>
