edited stats view

--- a/views/stats/stats-index.ejs
+++ b/views/stats/stats-index.ejs
@@ -1,6 +1,10 @@
 <% include ../partials/boilerplate %>
 
-<h1>Stats Index</h1>
+<h1>Stats</h1>
+
+<h2 class='month-header'>This Week</h2>
+
+<% include graph %>
 
 <h2 class='month-header'>By Month</h2>
 
