--- a/views/stats/month-table.ejs
+++ b/views/stats/month-table.ejs
@@ -1,47 +1,7 @@
 <% include ../partials/boilerplate %>
 
 <h1><%=month%></h1>
-<div class='chart-container' style="position: relative; height:60vh; width:60vw">
-	<canvas id="myLineChart" width="400" height="400"></canvas>
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.js"></script>
 
+<% include graph %>
 
-<script>
-
-var dates = [<%=dates%>];
-var cals = [<%=cals%>];
-console.log(cals);
-
-console.log(typeof dates);
-
-	var ctx = document.getElementById("myLineChart").getContext('2d');
-	var myLineChart = new Chart(ctx, {
-		type: 'line',
-		data: {
-			labels: dates,
-			datasets: [{
-				label: 'calories',
-				backgroundColor: 'rgba(0,0,0,0)',
-				borderColor: '#13CAD5',
-				data: cals,
-			}]
-		},
-		options: {
-			layout: {
-				padding: 100
-			},
-			maintainAspectRatio: false,
-			scales: {
-            	yAxes: [{
-                	ticks: {
-                    	beginAtZero:true
-                	}
-           	 	}]
-        	}
-		}
-	});
-</script>
-
-
-<% include ../partials/end %>
+<% include ../partials/end%>
