cleaning up css

--- a/views/stats/graph.ejs
+++ b/views/stats/graph.ejs
@@ -26,9 +26,11 @@ console.log(typeof dates);
 		},
 		options: {
 			layout: {
-				padding: 100
+				padding: 10
 			},
+			spanGaps: true,
 			maintainAspectRatio: false,
+			xAxisId: 'date',
 			scales: {
             	yAxes: [{
                 	ticks: {
