--- a/views/food-entries/food-single.ejs
+++ b/views/food-entries/food-single.ejs
@@ -6,7 +6,7 @@
 
 	<div class='single-div entry'>
 		<h1><%= data.name %></h1>
-		<h3><%= data.time %></h3>
+		<h3><%= data.formattedTime %></h3>
 		<h3><%= data.cals %> Calories</h3>
 		<h3><%= data.details %></h3>
 	
