--- a/views/stats/month-table.ejs
+++ b/views/stats/month-table.ejs
@@ -5,7 +5,7 @@
 	</a>
 
 <h1><%=month%></h1>
-<h2 class='header-2'>Average Calories Per Day: <%=Math.round(avgCals) %></h2>
+<h2 class='header-2'>Average Daily Calories: <%=Math.round(avgCals) %></h2>
 
 <% include graph %>
 
