--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/boilerplate %>
 
 <%  %>
-<div class='profile'>
+<div class='profile entry'>
 	<h1 id='username'><%=user.username%></h1>
 	<h2 id='fullname'><%=user.firstname%> <%=user.lastname%></h2>
 	<h3 id='email'><%=user.email%></h3>
