--- a/views/food-entries/food-add.ejs
+++ b/views/food-entries/food-add.ejs
@@ -1,31 +1,19 @@
 <% include ../partials/boilerplate %>
+	
+	<a href='/food' class='back'>
+		<i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
+	</a>
+
+	
 
 	<h1 class='add-header'>Add Item</h1>
 
-	<div class='form-div'>
+		<form class='search' method='POST' action='/food/add' class='search'>
+			<input name='item' type='text' placeholder='item'>
+			<input type='submit' value='search' class='button'/>
+		</form>
 
-		<div class='search-div'>
-			<form method='POST' action='/food/add' class='search'>
+	<a id='add-manual' href='/food/add-manual'>Add Manually</a>
 
-				<input name='item' type='text' placeholder='item'>
-				<input type='submit' value='search' class='button'/>
-				
-			</form>
-		</div>
-
-		<div class='add-div'>
-			<form method='POST' action='/food' class='add-form'>
-				<input name='time' type='time' placeholder='time' required />
-				<input name='name' type='text' placeholder='item' required />
-				<input name='cals' type='number' placeholder='calories' required />
-				<input name='details' type='text' placeholder='details' />
-				<input type='submit' value='add' class='button'/>
-			</form>
-		</div>
-
-	</div>
-
-	
-	<a href='/food'>Cancel</a>
 
 <% include ../partials/end %>
