charts are working

--- a/views/food-entries/add-manual.ejs
+++ b/views/food-entries/add-manual.ejs
@@ -5,8 +5,7 @@
 		<i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
 	</a>
 
-
-	<h1 class='add-header'>Add Item</h1>
+	<h1>Add Item</h1>
 
 			<form class='search' method='POST' action='/food' class='add-form'>
 				<input name='time' type='time' placeholder='time' required />
