--- a/views/food-entries/food-add.ejs
+++ b/views/food-entries/food-add.ejs
@@ -4,11 +4,10 @@
 		<i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
 	</a>
 
-	
 
-	<h1 class='add-header'>Add Item</h1>
+	<h1>Add Item</h1>
 
-		<form class='search' method='POST' action='/food/add' class='search'>
+		<form class='search' method='POST' action='/food/add'>
 			<input name='item' type='text' placeholder='item'>
 			<input type='submit' value='search' class='button'/>
 		</form>
