--- a/views/food-entries/food-index.ejs
+++ b/views/food-entries/food-index.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/boilerplate %>
 	
-	<h1 class='date-header'><%= date %></h1>
+	<h1><%= date %></h1>
 
 	<div class='headers entry'>
 		<h2 class='time-col'>Time</h2>
@@ -16,8 +16,9 @@
 			<h2 class='name-col'><%= food.name %></h1>
 			<h2 class='cals-col'><%= food.cals %> calories</h2>
 			<a class ='details-col' href='/food/<%=food.id%>'><i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i>
-</a>
+			</a>
 		</div>
+		
 	<% } %>
 
 	<a id='add-button' href='/food/add'>
