--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -118,7 +118,12 @@ li {
 }
 
 
-
+.header-3 {
+	text-align: center;
+	font-size: 20px;
+	margin-bottom: 20px;
+	color: #0E94A1;
+}
 
 
 .home-div {
@@ -127,10 +132,24 @@ li {
 	align-items: center;
 	margin-top: 100px;
 }
+
 .edit-div {
+	margin-top: 20px;
  	display: flex;
  	flex-direction: row;
- 	justify-content: flex-end;
+ 	width: 100%;
+ 	justify-content: space-between;
+ 	align-items: space-around;
+}
+
+#edit {
+	color: #223647; 
+	margin-right: 10px;
+}
+#edit:hover, #delete:hover {
+	color: white;
+	transition: 0.5s;
+	cursor: pointer; 
 }
 
 .single-div {
@@ -319,12 +338,18 @@ select:-webkit-autofill {
 	flex-direction: row;
 	justify-content: center;
 	align-content: center;
-	background-color: red;
 }
 
 .form-div input {
 	display: block;
 	width: 80%;
+}
+
+
+#delete {
+	background-color: rgba(0,0,0,0);
+	border: 0px;
+	color: #223647;
 }
 
 .search {
