--- a/views/archive/day-single.ejs
+++ b/views/archive/day-single.ejs
@@ -4,7 +4,7 @@
 		<i class="fa fa-chevron-left fa-2x" aria-hidden="true"></i>
 	</a>
 
-	<h1 class='date-header'><%= date %></h1>
+	<h1><%= date %></h1>
 
 	<div class='headers entry'>
 		<h2 class='time-col'>Time</h2>
@@ -25,7 +25,7 @@
 	<div class='entry' id='total-cals'>
 		<h2 class='time-col'>TOTAL</h2>
 		<h2 class='name-col'></h2>
-		<h2 class='cals-col'><%= totalCals%> Calories</h2>
+		<h2 class='cals-col'><%= totalCals%> calories</h2>
 		<h2></h2>
 	</div>
 
