--- a/views/food-entries/food-index.ejs
+++ b/views/food-entries/food-index.ejs
@@ -18,7 +18,7 @@
 			<a class ='details-col' href='/food/<%=food.id%>'><i class="fa fa-arrow-circle-right fa-2x" aria-hidden="true"></i>
 			</a>
 		</div>
-		
+
 	<% } %>
 
 	<a id='add-button' href='/food/add'>
@@ -32,7 +32,7 @@
 	<div class='entry' id='total-cals'>
 		<h2 class='time-col'>TOTAL</h2>
 		<h2 class='name-col'></h2>
-		<h2 class='cals-col'><%= totalCals%> Calories</h2>
+		<h2 class='cals-col'><%= totalCals%> calories</h2>
 		<h2></h2>
 	</div>
 
