--- a/views/food-entries/add-manual.ejs
+++ b/views/food-entries/add-manual.ejs
@@ -7,7 +7,7 @@
 
 	<h1>Add Item</h1>
 
-			<form class='search' method='POST' action='/food' class='add-form'>
+			<form class='search' method='POST' action='/food'>
 				<input name='time' type='time' placeholder='time' required />
 				<input name='name' type='text' placeholder='item' required />
 				<input name='cals' type='number' placeholder='calories' required />
