--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,14 @@
 <% include ./partials/boilerplate %>
+
+
+<div class='welcome-div'>
 	<h1 class='welcome'>welcome.</h1>
-	<div class='home-div'>
-		<a href='/auth/login' class='button'>Log In</a>
-		<a href='/auth/register' class='button'>Register</a>
-	</div>
+	<i class="fa fa-cutlery fa-5x welcome" aria-hidden="true"></i>
+</div>
+
+<div class='home-div'>
+	<a href='/auth/login' class='button'>Log In</a>
+	<a href='/auth/register' class='button'>Register</a>
+</div>
+
 <% include ./partials/end %>
