--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -7,6 +7,7 @@
   <title>Food Diary</title> 
   <script src="https://use.fontawesome.com/c237e30b0b.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Asap:700" rel="stylesheet">
   <link href="/styles/reset.css" rel="stylesheet" type="text/css">
   <link href="/styles/style.css" rel="stylesheet" type="text/css"> 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
