added comments to controller files

--- a/views/stats/stats-index.ejs
+++ b/views/stats/stats-index.ejs
@@ -3,7 +3,7 @@
 <h1>Stats</h1>
 
 <h2 class='header-2'>This Week</h2>
-<h3 class='header-3'>Average Calories: <%=Math.round(avgCals)%></h3>
+<h3 class='header-3'>Average Daily Calories: <%=Math.round(avgCals)%></h3>
 <% include graph %>
 
 <h2 class='header-2'>By Month</h2>
