--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,5 +1,19 @@
-<% include ../partials/boilerplate %>
+<!DOCTYPE html>
+<html lang='en'>
+<head>
+  <meta charset='UTF-8' />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <meta http-equiv='X-UA-Compatible' content='ie=edge' />
+  <title>Food Diary</title> 
+  <script src="https://use.fontawesome.com/c237e30b0b.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Asap:700" rel="stylesheet">
+  <link href="/styles/reset.css" rel="stylesheet" type="text/css">
+  <link href="/styles/style.css" rel="stylesheet" type="text/css"> 
+</head>
+<body>
 	
+	<h1>Register</h1>
 	<div class='auth-div'> 
 	<form method='POST' action='/auth/register'>
 		<input name='username' type='text' placeholder='username' required />
